# babymedgemma

./: .gitignore  HF_CARD.md  MODEL_CARD.md  README.md  RESULTS.md  auc_sweep.py  build_padchest10k.py  build_scaled_index.py  build_transfer_index.py  condition_activation.py  convert_to_hf.py  convert_v2_to_hf.py  data_index.py  dataset.py  diag_ood.py  diag_readout.py  encode_shard.py  eval_ground_nih.py  eval_scaled.py  eval_transfer.py  experiment_a.py  experiment_e.py  figures.py  flip_threshold_robustness.py  gemma_model.py  gemma_tokenizer.py  jlens.py  merge_shards.py  metrics.py  model.py  modeling_babymedgemma.py  nih_auc_analysis.py  nih_demo.py  precompute_features.py  precompute_pooled.py  pyproject.toml  requirements.txt  run_all_experiments.sh  run_all_gpus.py  run_v2_eval.sh  (+5 more)
docs/: EXPERIMENTS.md  detecting_flips_and_image_unreliance.md  tiny_vlm_psf_isolation.md
results/: summary.json
results/sae/: sae.json
results_gemma/: summary.json
results_gemma/grounding/: auc_ablation.json  auc_sweep.json  condition_activation.json  flip_threshold_robustness.json  ground_nih.json  hostile_audit.json  nih_auc.json  verify_grounding.json
results_gemma/jlens_gemma/: jlens.json
results_gemma/nih_demo/: nih_demo.json
results_gemma/sae_gemma/: sae.json
results_ground/: summary.json
results_scaled/: eval_scaled.json
results_transfer/: detect.json  detect_percase.json  eval_transfer.json  route_flip_pilot.json  route_flip_records.json
results_transfer_grid/: dispersion.json  summary.json
results_transfer_heldout/: summary.json
src/babygemma/: nih.py  (+8 more)
(+406 files in other folders)
