[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "babygemma"
version = "0.1.0"
description = "A small, MedGemma-faithful chest-X-ray probe for isolating paraphrase sensitivity"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.3",
    "transformers>=4.57",
    "huggingface_hub>=0.24",
    "Pillow>=10.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
]

[tool.setuptools.packages.find]
where = ["src"]
